open_issues/binutils: Forgot to update the build configuration a few times...

--- a/open_issues/binutils.mdwn
+++ b/open_issues/binutils.mdwn
@@ -334,9 +334,8 @@ Last reviewed up to Git commit e49433d22dae92a56ae15a8b5742cbf1f31d5fd1
 # Build
 
 Here's a log of a binutils-gdb build run; this is from Git commit
-05db5edd7923711a20c6225ea8e15f36e819d140 (2014-09-16), run on kepler.SCHWINGE
-and laplace.SCHWINGE (with [[!message-id "87iokondoc.fsf@schwinge.name"]]
-applied).
+e49433d22dae92a56ae15a8b5742cbf1f31d5fd1 (2015-08-19), run on kepler.SCHWINGE
+and laplace.SCHWINGE.
 
     $ export LC_ALL=C
     $ ../W._C._Handy/configure --prefix="$PWD".install --enable-gold --enable-plugins --with-sysroot=/ SHELL=/bin/dash CC=gcc-4.9 CXX=g++-4.9 --disable-werror 2>&1 | tee log_build
