add apt as problematic

--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -23,6 +23,7 @@ This page lists the few packages whose build makes the Debian buildd box crash a
 
   * ruby-hiredis
   * libxs
+  * apt
 
 * ext2fs gets stuck
 
