document that the subversion testsuite kills the session

--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -24,6 +24,7 @@ This page lists the few packages whose build makes the Debian buildd box crash a
   * ruby-hiredis
   * libxs
   * apt
+  * subversion testsuite
 
 * ext2fs gets stuck
 
