--- a/community/meetings/fosdem_2016.mdwn
+++ b/community/meetings/fosdem_2016.mdwn
@@ -22,6 +22,7 @@ Bruxelles.
 [[!table class="table_style_1" data="""
 "Name","Attending","Arrival","Return"
 "Samuel Thibault","yes","Saturday, 09:17 BRU","Sunday, 19:13 BRU"
+"[[Thomas Schwinge|tschwinge]]","yes","Friday, 17:35, Bruxelles Midi","Sunday, 18:25, Bruxelles Midi"
 """]]
 
 
