--- a/community/meetings.mdwn
+++ b/community/meetings.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014,
-2015 Free Software Foundation, Inc."]]
+2015, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -12,6 +12,8 @@ License|/fdl]]."]]"""]]
 [[!meta title="Meetings with Hurd developer attendance"]]
 
 # Upcoming
+
+  * [[FOSDEM_2016]]
 
 
 # Past
