darnassus: sthttpd (thttpd) instead of apache2

--- a/public_hurd_boxen/installation/darnassus.mdwn
+++ b/public_hurd_boxen/installation/darnassus.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2013, 2014, 2015 Free Software Foundation,
+[[!meta copyright="Copyright © 2013, 2014, 2015, 2016 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -14,9 +14,10 @@ License|/fdl]]."]]"""]]
 
 # Packages
 
-  * apache2
+  * sthttpd (thttpd)
 
     Installation done by Richard.
+    [[!message-id "20151122000109.GA8492@shattrath"]].
 
   * ikiwiki
 
@@ -92,7 +93,7 @@ May want to clean up `~hurd-web/public_html.workspace/.ikiwiki/` before that.
 
 As a user with appropriate permissions, then install the CGI file:
 
-    $ sudo mv ~hurd-web/public_html.workspace.cgi /usr/lib/cgi-bin/hurd-web
+    § sudo mv ~hurd-web/public_html.workspace.cgi /var/www/html/hurd-web.cgi
 
 
 # `~tschwinge/`
@@ -120,15 +121,6 @@ This file used to contain:
 The goal is that robots rather index the official pages,
 <http://www.gnu.org/software/hurd/>, instead of the staging area on
 <http://darnassus.sceen.net/~hurd-web/>.
-
-
-# Restore Backup
-
-/!\ TODO.
-
-## `/etc/apache2/mods-enabled/`
-
-`rewrite.load`, `userdir.conf`, `userdir.load`
 
 
 # IRC, freenode, #hurd, 2013-02-09
@@ -160,9 +152,6 @@ The goal is that robots rather index the official pages,
     <tschwinge> OK, I again understand the setup.  Last been touched in the
       2008/2009 timeframe.  ;-)
 
-    <braunr> so you finished your pat i suppose
-    <braunr> i'll install apache
-    <braunr> part*
     <tschwinge> I'll add a hurd-web user.
     <tschwinge> So...  I actually have to locate a backup of the files from
       flubber related to the wiki,
