--- a/community/meetings/fosdem_2016.mdwn
+++ b/community/meetings/fosdem_2016.mdwn
@@ -36,6 +36,6 @@ Bruxelles.
 
 thibault_hurd:
 
-  "presentation by Samuel Thibault: [*Hurd, Rump kernel, sound, and usb*]"
+  "presentation by Samuel Thibault: [*Hurd, Rump kernel, sound, and usb*]"(https://fosdem.org/2016/schedule/event/microkernels_hurd_rump_sound_usb/) ([slides](https://fosdem.org/2016/schedule/event/microkernels_hurd_rump_sound_usb/attachments/slides/951/export/events/attachments/microkernels_hurd_rump_sound_usb/slides/951/2016_01_30_fosdem.pdf))
 
 """]]
