--- a/documentation.mdwn
+++ b/documentation.mdwn
@@ -84,6 +84,10 @@ from userlandish interfaces (Hurd) or from the micro kernel itself (Mach).
 
 # Presentations
 
+## 2016
+
+  * FOSDEM: {{$community/meetings/fosdem_2016#thibault_hurd}}
+
 ## 2015
 
   * FOSDEM: {{$community/meetings/fosdem_2015#thibault_hurd}}
