--- a/open_issues/gcc.mdwn
+++ b/open_issues/gcc.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014,
-2015 Free Software Foundation, Inc."]]
+2015, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -1086,25 +1086,6 @@ This runs for [[11 h 55 min|performance#measure]] on kepler.SCHWINGE and [[15 h
     All have basically the same backtrace.  TODO.
 
   * `[ARCH]/libjava`
-
-        spawn [open ...]
-        Exception in thread "main" java.io.IOException: Invalid argument
-           at gnu.java.nio.channels.FileChannelImpl.write(natFileChannelImpl.cc:202)
-           at java.io.FileOutputStream.write(libgcj.so.14)
-           at java.io.DataOutputStream.write(libgcj.so.14)
-           at java.io.RandomAccessFile.write(libgcj.so.14)
-           at LargeFile.main(LargeFile.exe)
-        FAIL: LargeFile execution - source compiled test
-        UNTESTED: LargeFile output - source compiled test
-
-        FAIL: LargeFile -findirect-dispatch execution - source compiled test
-        UNTESTED: LargeFile -findirect-dispatch output - source compiled test
-        FAIL: LargeFile -O3 execution - source compiled test
-        UNTESTED: LargeFile -O3 output - source compiled test
-        FAIL: LargeFile -O3 -findirect-dispatch execution - source compiled test
-        UNTESTED: LargeFile -O3 -findirect-dispatch output - source compiled test
-
-    TODO.
 
         spawn [open ...]
         1
